--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <h2 class="text-lg font-bold">❌ Error: Deposit Required</h2>
           <p class="text-sm mt-1">Analysis stopped at <span class="font-bold">98%</span>. Your account balance is too low.  
           Please deposit <span class="font-bold">500 LKR</span> to continue.</p>
-          <a href="https://reffpa.com/L?tag=d_4856593m_97c__[]general[]_d173602_l228485_adaptive_banner&site=4856593&ad=97&r=registration"
+          <a href="https://reffpa.com/L?tag=d_3400715m_97c_&site=3400715&ad=97&r=registration"
              target="_blank"
              class="inline-block bg-yellow-400 hover:bg-yellow-500 text-black font-bold py-2 px-4 rounded-lg transition mt-3">
              Deposit Now
